<resources>
    <string name="app_name">CocktailBar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cocktails">My cocktails</string>
    <string name="add_your_first_cocktail_here">Add your first cocktail here</string>
    <string name="action_try_again">Try Again</string>
    <string name="error_title">An error occurred!</string>
    <string name="edit">Edit</string>
    <string name="recipe">Recipe</string>
    <string name="cocktail_name">Cocktail name</string>
    <string name="optional_field">Optional Field</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="ask_cancel_post_warning">All changes will be lost\n</string>
    <string name="action_delete">Delete</string>
    <string name="action_back">Back</string>
    <string name="description">Description</string>
    <string name="recipe_title">Recipe:</string>
    <string name="ask_delete_cocktail_warning">Are you sure you want to delete this cocktail?</string>
    <string name="add_cocktail_name">Enter name for yout cocktail</string>
    <string name="add_ingredients">Add ingredients</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="ingredient_s_name">Ingredient</string>
    <string name="add">Add</string>
    <string name="fill_ingredient_field">Add an ingredient</string>
</resources>