<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:background="@drawable/ingredient_dialog_shape"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingEnd="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textAppearance="@style/Text.Normal.32"
        android:gravity="center_horizontal"
        android:text="@string/add_ingredient"
        android:textSize="32sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextFieldIngredient"
        style="@style/DefaultTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/ingredient_s_name">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/DefaultTextInputEditText"
            android:id="@+id/editTextIngredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonAdd"
        style="@style/FilledButton.MW"
        android:layout_marginTop="44dp"
        android:text="@string/add"
        android:textSize="24sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCloseDialog"
        style="@style/OutlineButton.MW"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/cancel"
        android:textSize="24sp" />
</LinearLayout>