<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".presentation.add_cocktail.AddEditCocktailFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/content_nsv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="216dp"
                android:layout_height="204dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/grey"
                app:cardCornerRadius="@dimen/corner_radius"
                app:strokeWidth="0dp">

                <ImageView
                    android:id="@+id/cocktail_picture_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/photo_icon" />

            </com.google.android.material.card.MaterialCardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/DefaultTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                app:helperText="Add title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionNext"
                    android:maxLines="2"
                    tools:text="Cocktail name" />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/DefaultTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                app:helperText="@string/optional_field">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionNext"
                    android:maxLines="10"
                    tools:text="To make this homemade" />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/my_cocktails_tv"
                tools:listitem="@layout/item_ingredient_add" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/DefaultTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/recipe"
                app:helperText="@string/optional_field">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/recipe_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionDone"
                    android:maxLines="10"
                    tools:text="Muddle lime with leaves from the mint using a pestle and mortar. Mix with sprite. Add ice if needed." />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        style="@style/FilledButton.MW"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/save"
        app:layout_constraintBottom_toTopOf="@id/cancel_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        style="@style/OutlineButton.MW"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="26dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <include
        android:id="@+id/loading_view"
        layout="@layout/view_loading"
        android:visibility="gone" />

    <include
        android:id="@+id/error_view"
        layout="@layout/view_error"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>