<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".presentation.AddCocktailFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="216dp"
                android:layout_height="204dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/grey"
                app:cardCornerRadius="@dimen/corner_radius"
                app:strokeWidth="0dp">

                <ImageView
                    android:id="@+id/cocktail_picture_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/photo_icon" />

            </com.google.android.material.card.MaterialCardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/title"
                app:boxCornerRadiusBottomEnd="@dimen/corner_radius"
                app:boxCornerRadiusBottomStart="@dimen/corner_radius"
                app:boxCornerRadiusTopEnd="@dimen/corner_radius"
                app:boxCornerRadiusTopStart="@dimen/corner_radius"
                app:helperText="Add title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="adadad" />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/cocktail_name"
                app:boxCornerRadiusBottomEnd="@dimen/corner_radius"
                app:boxCornerRadiusBottomStart="@dimen/corner_radius"
                app:boxCornerRadiusTopEnd="@dimen/corner_radius"
                app:boxCornerRadiusTopStart="@dimen/corner_radius"
                app:helperText="@string/optional_field">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="adadad" />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/cocktail_name"
                app:boxCornerRadiusBottomEnd="@dimen/corner_radius"
                app:boxCornerRadiusBottomStart="@dimen/corner_radius"
                app:boxCornerRadiusTopEnd="@dimen/corner_radius"
                app:boxCornerRadiusTopStart="@dimen/corner_radius"
                app:helperText="@string/optional_field">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/recipe_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="adadad" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/background_basic"
        android:text="@string/save"
        android:textAppearance="@style/Text.Normal.24"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/background_outlined"
        android:stateListAnimator="@null"
        android:text="@string/cancel"
        android:textAppearance="@style/Text.Normal.24"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="26dp" />

</LinearLayout>