<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sheet"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="28dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cocktail_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingHorizontal="16dp"
                android:textAlignment="center"
                android:textAppearance="@style/Text.Normal.32"
                tools:text="Pink Lemonade" />

            <Space
                android:id="@+id/cocktail_description_space"
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:id="@+id/cocktail_description_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textAppearance="@style/Text.Normal.16"
                tools:text="To make this homemade pink lemonade, simply combine all the ingredients in a pitcher." />

            <Space
                android:id="@+id/ingredients_list_space_higher"
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ingredients_list_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:spanCount="1"
                tools:listitem="@layout/item_ingredient" />

            <Space
                android:id="@+id/ingredients_list_space_lower"
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <TextView
                android:id="@+id/recipe_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="16dp"
                android:text="@string/recipe_title"
                android:textAlignment="center"
                android:textAppearance="@style/Text.Normal.16" />

            <TextView
                android:id="@+id/recipe_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textAppearance="@style/Text.Normal.16"
                app:layout_constraintTop_toBottomOf="@id/recipe_title_tv"
                tools:text="To make this homemade pink lemonade, simply combine all the ingredients in a pitcher." />

            <Space
                android:id="@+id/recipe_space"
                android:layout_width="match_parent"
                android:layout_height="24dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_button"
        style="@style/FilledButton.MW"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/delete_button"
        android:text="@string/edit" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_button"
        style="@style/OutlineButton.MW"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/action_delete" />

</androidx.constraintlayout.widget.ConstraintLayout>